Bug Fix: Data Server did not return Port using Channel Fixed

--- a/PKr-base/Makefile
+++ b/PKr-base/Makefile
@@ -4,5 +4,8 @@ protofiles:
 
 protoc_files:
 	protoc --go_out=. ./proto/*.proto
+
+build_base:
+	DEL /S PKr-base.exe && go build
 # Prefered One
 # .PHONY protofiles
